scroll on mobile fix #1

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,4 +17,5 @@ html::-webkit-scrollbar {
 
 html {
   scrollbar-width: none;
+  -webkit-overflow-scrolling: touch;
 }
